--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="ui visible inverted left vertical sidebar menu">
-    <div *ngIf="isLoggedIn()">
+    <div *ngIf="isLoggedIn()" class="sidebar-content">
         <div class="avatar-container item">
             <div class="first-letter-circle">{{firstLetter}}</div>
             <h2>{{username}}</h2>
