--- a/application/src/styles.css
+++ b/application/src/styles.css
@@ -38,6 +38,12 @@
 
 .item-bottom a:hover {
     text-decoration: underline;
+    background-color: #1B1C1D;
+}
+
+.sidebar-content {
+    margin-bottom: 50px;
+    overflow-y: auto;
 }
 
 .login-container {
