Services adding, editing

--- a/application/src/app/components/about/about.component.html
+++ b/application/src/app/components/about/about.component.html
@@ -1,1 +1,9 @@
 <h1>Daj Się Poznać 2017</h1>
+<h5>Projekt rozwijany w ramach konkursu Daj Się Poznać 2017</h5>
+<p>
+    Projekt jest rozwijany jako projekt OpenSource. Pliki i kod projektu jest udostępniony na GitHub.
+</p>
+<p>
+    Ta strona została stworzona jedynie w celach prezentacyjnych. Służy do sprawdzania i przetestowania aplikacji.<br>
+    Nie odpowiadam z wszelkie informacje i dane umieszczane tutaj przez osoby korzystające ze strony.
+</p>
