--- a/application/src/app/components/services/services.component.html
+++ b/application/src/app/components/services/services.component.html
@@ -32,21 +32,104 @@
             <th (click)="sortingBy('email')">Brutto
                 <i class="sort icon" [ngClass]="{'descending': (order('email')=='DESC'), 'ascending': (order('email')=='ASC')}"></i>
             </th>
+            <th class="collapsing"></th>
         </tr>
     </thead>
     <tbody *ngIf="isReturn()">
-        <tr *ngFor="let service of services">
-            <td class="collapsing">
-                <div class="ui fitted checkbox">
-                    <input type="checkbox" (change)="addDelete(service.id)" [checked]="isCheck(service.id)">
-                    <label></label>
+        <tr *ngFor="let service of services; let key = index">
+            <ng-container *ngIf="!isEdited(service.id)">
+                <td class="collapsing">
+                    <div class="ui fitted checkbox">
+                        <input type="checkbox" (change)="addDelete(service.id)" [checked]="isCheck(service.id)">
+                        <label></label>
+                    </div>
+                </td>
+                <td>{{ service?.name }}</td>
+                <td>{{ service?.netto | number : '1.2-2'}}</td>
+                <td>{{ service?.vat | number : '1.2-2'}}</td>
+                <td>{{ service?.vat_sum | number : '1.2-2'}}</td>
+                <td>{{ service?.brutto | number : '1.2-2'}}</td>
+                <td class="collapsing">
+                    <div class="ui  blue icon button mini" (click)="edit(service.id, key)"><i class="edit icon"></i></div>
+                    <div class="ui  red icon button mini" (click)="showAdd = false"><i class="trash icon"></i></div>
+                </td>
+            </ng-container>
+            <ng-container *ngIf="isEdited(service.id)">
+                <td style="text-align: center;">
+                </td>
+                <td>
+                    <div class="ui form">
+                        <div class="field">
+                            <input type="text" name="name" [(ngModel)]="inputService.name">
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="netto" [(ngModel)]="inputService.netto" (blur)="nettoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui right labeled input">
+                        <input type="text" name="vat" style="width: 50px;" [(ngModel)]="inputService.vat" (blur)="vatBlur()">
+                        <div class="ui basic label">
+                            %
+                        </div>
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="vatSum" [(ngModel)]="inputService.vatSum" (blur)="vatSumBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui input">
+                        <input type="text" name="brutto" [(ngModel)]="inputService.brutto" (blur)="bruttoBlur()">
+                    </div>
+                </td>
+                <td class="collapsing">
+                    <div class="ui  green icon button mini" (click)="addNewPosition()"><i class="checkmark icon"></i></div>
+                    <div class="ui  red icon button mini" (click)="hideEdit()"><i class="remove icon"></i></div>
+                </td>
+            </ng-container>
+        </tr>
+        <tr *ngIf="showAdd">
+            <td style="text-align: center;">
+            </td>
+            <td>
+                <div class="ui form">
+                    <div class="field">
+                        <input type="text" name="name" [(ngModel)]="inputService.name">
+                    </div>
                 </div>
             </td>
-            <td><a [routerLink]="['/services', service.id]">{{ service?.name }}</a></td>
-            <td>{{ service?.netto | number : '1.2-2'}}</td>
-            <td>{{ service?.vat | number : '1.2-2'}}</td>
-            <td>{{ service?.vat_sum | number : '1.2-2'}}</td>
-            <td>{{ service?.brutto | number : '1.2-2'}}</td>
+            <td class="collapsing">
+                <div class="ui input">
+                    <input type="text" name="netto" [(ngModel)]="inputService.netto" (blur)="nettoBlur()">
+                </div>
+            </td>
+            <td class="collapsing">
+                <div class="ui right labeled input">
+                    <input type="text" name="vat" style="width: 50px;" [(ngModel)]="inputService.vat" (blur)="vatBlur()">
+                    <div class="ui basic label">
+                        %
+                    </div>
+                </div>
+            </td>
+            <td class="collapsing">
+                <div class="ui input">
+                    <input type="text" name="vatSum" [(ngModel)]="inputService.vatSum" (blur)="vatSumBlur()">
+                </div>
+            </td>
+            <td class="collapsing">
+                <div class="ui input">
+                    <input type="text" name="brutto" [(ngModel)]="inputService.brutto" (blur)="bruttoBlur()">
+                </div>
+            </td>
+            <td class="collapsing">
+                <div class="ui  green icon button mini" (click)="addNewPosition()"><i class="checkmark icon"></i></div>
+                <div class="ui  red icon button mini" (click)="showAdd = false"><i class="remove icon"></i></div>
+            </td>
         </tr>
     </tbody>
     <tbody *ngIf="!isReturn()">
@@ -83,6 +166,6 @@
         </tr>
     </tfoot>
 </table>
-<div class="ui green labeled icon button" [routerLink]="['/services/add']">
+<div class="ui green labeled icon button" (click)="add()">
     <i class="configure icon"></i> Nowa usługa
 </div>
