--- a/application/src/app/components/timetable/timetable.component.html
+++ b/application/src/app/components/timetable/timetable.component.html
@@ -5,7 +5,7 @@
                 <i class="angle left icon"></i>
             </button>
             <button class="ui button">
-                6 kwiecień 2017
+                kwiecień 2017
             </button>
             <button class="ui button">
                 <i class="angle right icon"></i>
@@ -39,10 +39,10 @@
             </div>
         </div>
         <div class="week">
-            <div class="item last">
+            <div class="item inactive">
                 <p class="day">27</p>
             </div>
-            <div class="item last">
+            <div class="item inactive">
                 <p class="day">28</p>
                 <ul>
                     <li><a href="#">Zlecenie 123</a></li>
@@ -54,13 +54,13 @@
                     <li><a href="#">Zlecenie 123</a></li>
                 </ul>
             </div>
-            <div class="item last">
+            <div class="item inactive">
                 <p class="day">29</p>
             </div>
-            <div class="item last">
+            <div class="item inactive">
                 <p class="day">30</p>
             </div>
-            <div class="item last">
+            <div class="item inactive">
                 <p class="day">31</p>
             </div>
             <div class="item">
@@ -190,6 +190,45 @@
             </div>
             <div class="item">
                 <p class="day">30</p>
+            </div>
+        </div>
+        <div class="week">
+            <div class="item">
+                <p class="day">31</p>
+                <ul>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                    <li><a href="#">Zlecenie 123</a></li>
+                </ul>
+            </div>
+            <div class="item inactive">
+                <p class="day">01</p>
+            </div>
+            <div class="item inactive">
+                <p class="day">02</p>
+            </div>
+            <div class="item inactive">
+                <p class="day">03</p>
+            </div>
+            <div class="item inactive">
+                <p class="day">04</p>
+            </div>
+            <div class="item inactive">
+                <p class="day">05</p>
+            </div>
+            <div class="item inactive">
+                <p class="day">06</p>
             </div>
         </div>
     </div>
