--- a/application/src/app/components/documents/document.component.html
+++ b/application/src/app/components/documents/document.component.html
@@ -1,21 +1,7 @@
-<div class="ui grid">
+<div class="ui grid" style="min-height: calc(100vh - 80px);">
     <div class="four wide column">
         <div class="ui segment">
-            <div class="ui active inverted dimmer" *ngIf="documentDataLoading">
-                <div class="ui loader"></div>
-            </div>
-            <h2 class="ui horizontal divider header">{{ document.number }}</h2>
-            <div class="ui right floated icon button mini"><i class="write icon"></i></div>
-            <b>Wystawiono:</b> {{ document.date | date: 'dd/MM/yyyy' }}
-            <br>
-            <b>Data płatności:</b> {{ document.dateOfPayment | date: 'dd/MM/yyyy' }}
-            <br>
-            <b>Metoda płatności:</b> {{ document.paymentMethod }}
-            <br>
-            <b>Zapłacono:</b> {{ document.paid ? "Tak" : "Nie" }}
-            <br>
-            <b>Miejsce:</b> {{ document.place }}
-            <br>
+            <document-params [id]=id></document-params>
         </div>
         <div class="ui segment">
             <div class="ui active inverted dimmer" *ngIf="userDataLoading">
