--- a/application/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/application/src/app/components/breadcrumb/breadcrumb.component.html
@@ -2,6 +2,8 @@
     <div class="ui large breadcrumb">
         <a class="section">Warsztat</a>
         <i class="right chevron icon divider"></i>
-        <div class="active section">Dokumenty</div>
+        <a class="section">Dokumenty</a>
+        <i class="right chevron icon divider"></i>
+        <div class="active section">{{ breadcrumbs.text }}</div>
     </div>
 </div>
